# grindr-rs

./: .env.template  Cargo.toml  LICENSE  README.org  rustfmt.toml
.github/workflows/: docs.yml  rust.yml
src/lib/: adapters.rs  domain.rs  infrastructure.rs  lib.rs
src/lib/adapters/chat/: redis.rs
src/lib/adapters/grpc/: server.rs
src/lib/adapters/grpc/handlers/: chat.rs  matching.rs  notification.rs  payment.rs  profile.rs  responses.rs  user.rs
src/lib/adapters/matching/: distance.rs  interest.rs
src/lib/adapters/notification/: websocket.rs
src/lib/adapters/payment/: mock.rs
src/lib/adapters/profile/: postgres.rs
src/lib/adapters/user/: postgres.rs  redis.rs
src/lib/domain/: user.rs
src/lib/domain/chat/: events.rs  ports.rs  service.rs
src/lib/domain/chat/models/: message.rs
src/lib/domain/events/: events.rs
src/lib/domain/matching/: ports.rs  service.rs
src/lib/domain/matching/models/: match.rs
src/lib/domain/notification/: ports.rs  service.rs
src/lib/domain/notification/models/: notification.rs
src/lib/domain/payment/: ports.rs  service.rs
src/lib/domain/payment/models/: transaction.rs
src/lib/domain/profile/: ports.rs  service.rs
src/lib/domain/profile/models/: profile.rs
src/lib/domain/user/: ports.rs  service.rs
src/lib/domain/user/models/: user.rs
src/lib/infrastructure/: cache.rs  database.rs  events.rs  monitoring.rs  solana.rs
