[package]
name = "grindr-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "grindr"
path = "src/lib/lib.rs"

[[bin]]
name = "grindr_server"
path = "src/bin/server/main.rs"

[dependencies]
actix = "0.13.5"
anyhow = "1.0.98"
redis = { version = "0.32.4", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = "0.12.22"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tonic = "0.14.0"
tracing = "0.1.41"
